# All-Tool-Box

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: publish-to-auto-release.yml
src/: App.css  App.tsx  main.tsx  tool_list.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: 13c60b23-e9bb-4b71-9236-06e2cce97308.avif  icon.icns
src-tauri/src/: lib.rs
src/cheatsheets/: common_styles.ts  commons.tsx  index.tsx
src/cheatsheets/bash/: data.tsx  index.tsx
src/cheatsheets/docker/: data.tsx  index.tsx
src/cheatsheets/go/: data.tsx  index.tsx
src/cheatsheets/javascript/: data.ts  index.tsx
src/cheatsheets/kubernetes/: data.tsx  index.tsx
src/cheatsheets/markdown/: data.tsx  index.tsx
src/cheatsheets/npm/: index.tsx
src/cheatsheets/python/: data.ts  index.tsx
src/cheatsheets/react/: data.tsx  index.tsx
src/cheatsheets/redis/: index.tsx
src/cheatsheets/regex/: data.tsx  index.tsx
src/cheatsheets/sass/: data.ts  index.tsx
src/cheatsheets/typescript/: data.ts  index.tsx
src/cheatsheets/vim/: index.tsx
src/components/command-palette/: index.tsx
src/components/footer/: bottom-footer.tsx  (+3 more)
src/settings/: index.tsx  styles.ts
src/snippets/: index.tsx
src/store/: footer_expanded_atom.ts  search_string_atom.ts  tauri_store_atom.ts  tauri_store_favorites_atom.ts  toolbar_ready_atom.ts
src/tools/: base64_encoder_decoder.tsx  footer_help.tsx  index.tsx  string_encrypter_decrypter.tsx  styles.ts  tool_wrapper.tsx  toolbar_help.tsx
(+94 files in other folders)
