[package]
name = "AllToolbox"
version = "1.1.0"
description = "All in one toolbox for any technical related profession"
authors = ["kevinly77", "AaronPatterson1", "mccallry", "jacob-lchen", "clearfeld"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "toolbox_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2.0.2"
tauri-plugin-dialog = "2.0.3"
tauri-plugin-fs = "2.0.3"
tauri-plugin-http = "2.0.3"
tauri-plugin-os = "2.0.1"
tauri-plugin-stronghold = "2.0.1"
rust-argon2 = "2.1"
tauri-plugin-store = "2.1.0"
tauri-plugin-upload = "2.1.0"
tauri-plugin-process = "2.0.1"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0.2"
